[gd_scene load_steps=15 format=3 uid="uid://bs0rdltsmfopr"]

[ext_resource type="Script" path="res://Scripts/map/dungeon_floor.gd" id="1_xbvmb"]
[ext_resource type="PackedScene" uid="uid://duv7i8yak343i" path="res://Scenes/menus/HUD.tscn" id="2_1h1xt"]
[ext_resource type="PackedScene" uid="uid://b52og3hhvj0k3" path="res://Scenes/menus/pause_menu.tscn" id="3_ckbd4"]
[ext_resource type="PackedScene" uid="uid://bigg81dibglne" path="res://Scenes/menus/options_menu.tscn" id="5_qo0qe"]
[ext_resource type="PackedScene" uid="uid://dc0xlg20ucy3n" path="res://Scenes/menus/catalog.tscn" id="6_dlfuy"]
[ext_resource type="PackedScene" uid="uid://dxlj826ndney4" path="res://Scenes/map/transition_camera.tscn" id="6_r7rvd"]
[ext_resource type="PackedScene" uid="uid://fyrmm4483e1a" path="res://Scenes/map/room_components/void_background.tscn" id="7_i637v"]
[ext_resource type="PackedScene" uid="uid://dahgvmrgtix2i" path="res://Scenes/player/player.tscn" id="9_j4ic3"]
[ext_resource type="PackedScene" uid="uid://ck8e6woekdesa" path="res://Scenes/map/randomizer.tscn" id="10_vua41"]
[ext_resource type="AudioStream" uid="uid://qi6piahv8xaw" path="res://Assets/Audio/background music/fairy-tale-fantasy-123608.mp3" id="26_efvkt"]

[sub_resource type="Animation" id="Animation_27xwy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_hdwk4"]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_jlyk7"]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k1oyi"]
_data = {
"RESET": SubResource("Animation_27xwy"),
"fade_in": SubResource("Animation_hdwk4"),
"fade_out": SubResource("Animation_jlyk7")
}

[node name="Floor3" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_xbvmb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Fade_color" type="ColorRect" parent="CanvasLayer"]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Fade_color"]
libraries = {
"": SubResource("AnimationLibrary_k1oyi")
}

[node name="Fade_timer" type="Timer" parent="CanvasLayer/Fade_color"]
wait_time = 2.5

[node name="HUD" parent="CanvasLayer" instance=ExtResource("2_1h1xt")]
unique_name_in_owner = true

[node name="Pause_menu" parent="CanvasLayer" instance=ExtResource("3_ckbd4")]
visible = false

[node name="Options_menu" parent="CanvasLayer" instance=ExtResource("5_qo0qe")]
visible = false

[node name="Catalog" parent="CanvasLayer" instance=ExtResource("6_dlfuy")]
visible = false

[node name="Transition Camera" parent="." instance=ExtResource("6_r7rvd")]

[node name="void_background" parent="." instance=ExtResource("7_i637v")]

[node name="Player" parent="." instance=ExtResource("9_j4ic3")]
unique_name_in_owner = true

[node name="BG music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("26_efvkt")
volume_db = -5.0
bus = &"Music"

[node name="randomizer" parent="." instance=ExtResource("10_vua41")]

[connection signal="timeout" from="CanvasLayer/Fade_color/Fade_timer" to="." method="_on_fade_timer_timeout"]
